fix endpoint responses in swagger
