# docs/swagger.json
@@ -45,8 +45,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/server.CreateGameResponse"
                         }
                     }
                 }
@@ -80,8 +79,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/server.JoinGameResponse"
                         }
                     }
                 }
@@ -123,6 +121,23 @@
                 }
             }
         },
+        "server.CreateGameResponse": {
+            "type": "object",
+            "properties": {
+                "config": {
+                    "$ref": "#/definitions/store.GameConfig"
+                },
+                "player_id": {
+                    "type": "string"
+                },
+                "room_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "server.JoinGameRequest": {
             "type": "object",
             "properties": {
@@ -130,6 +145,23 @@
                     "type": "string"
                 },
                 "room_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "server.JoinGameResponse": {
+            "type": "object",
+            "properties": {
+                "config": {
+                    "$ref": "#/definitions/store.GameConfig"
+                },
+                "player_id": {
+                    "type": "string"
+                },
+                "room_id": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
